--- a/res/layout/init_screen.xml
+++ b/res/layout/init_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
@@ -23,5 +23,22 @@
         android:layout_weight="0.08"
         android:textSize="30dp"
         android:clickable="true"
-        android:layout_gravity="center_horizontal|bottom" />
-</LinearLayout>
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="107dp"
+        android:onClick="startGridActivity" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:text="Test analysing module"
+        android:id="@+id/button4"
+        android:textSize="15dp"
+        android:clickable="true"
+        android:layout_gravity="bottom|right"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="startTestActivity" />
+</RelativeLayout>
