--- a/res/layout/init_screen.xml
+++ b/res/layout/init_screen.xml
@@ -10,6 +10,7 @@
         android:layout_height="252dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Test Your Chords"
+        android:textColor="#95000000"
         android:id="@+id/textView"
         android:gravity="center_vertical|center_horizontal"
         android:textSize="50dp"
@@ -19,6 +20,7 @@
         android:layout_width="207dp"
         android:layout_height="wrap_content"
         android:text="Pick a chord"
+        android:textColor="#97000000"
         android:id="@+id/button"
         android:layout_weight="0.08"
         android:textSize="30dp"
@@ -35,6 +37,7 @@
         android:text="Test analysing module"
         android:id="@+id/button4"
         android:textSize="15dp"
+        android:textColor="#97000000"
         android:clickable="true"
         android:layout_gravity="bottom|right"
         android:layout_alignParentTop="true"
